# icfpc2021

./: .gitignore  README.md  http.sh  stack.yaml
anneal/: anneal.cabal
anneal/app/: Main.hs
common/: common.cabal
common/rate/: Main.hs
common/src/ICFPC/: Annealing.hs  DbList.hs  Geometry.hs  IntPairMap.hs  Polygon.hs  Problem.hs  RLE.hs  RLE2D.hs  Rational.hs  Triangulate.hs  Vector.hs
editor/: editor.cabal
editor/app/: Main.hs
geometry/: geometry.cabal
geometry/src/ICFPC/: Annealing.hs  Geometry.hs  IntPairMap.hs
io/: io.cabal
io/src/ICFPC/: JSON.hs
io/src/ICFPC/JSON/: Options.hs
propagators/: propagators.cabal
propagators/app/: Main.hs
propagators/src/ICFPC/: Propagators.hs
rate/: rate.cabal
rate/app/: Main.hs
solutions/: 1.solution  10.solution  100.solution  101.solution  102.solution  103.solution  104.solution  105.solution  106.solution  107.solution  108.solution  109.solution  11.solution  110.solution  111.solution  112.solution  113.solution  117.solution  119.solution  120.solution  121.solution  122.solution  123.solution  124.solution  125.solution  126.solution  127.solution  128.solution  129.solution  130.solution  131.solution  132.solution  14.solution  15.solution  16.solution  2.solution  21.solution  27.solution  28.solution  29.solution  (+67 more)
splice/: splice.cabal
splice/src/: Splice.hs
splice/src/Splice/: GHC.hs  Linker.hs  Mod.hs  Reify.hs
