cabal-version:      2.4
name:               anneal
version:            0.1.0.0
author:             mniip
maintainer:         mniip@mniip.com
extra-source-files: CHANGELOG.md

executable anneal
    main-is:          Main.hs

    build-depends:    base >=4.14, io, geometry, containers, bytestring, random
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options:      -O2
