cabal-version:      2.4
name:               common
version:            0.1.0.0
author:             mniip
maintainer:         mniip@mniip.com

library
    exposed-modules:    ICFPC.Geometry
                      , ICFPC.IntPairMap
                      , ICFPC.Annealing
    build-depends:    base >=4.14, containers, io, random
    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options:      -O2

executable rate
    main-is:          Main.hs
    build-depends:    base >= 4.14, io, common, containers, bytestring
    hs-source-dirs:   rate
    default-language: Haskell2010
