cabal-version:      2.4
name:               geometry
version:            0.1.0.0
author:             mniip
maintainer:         mniip@mniip.com

library
    exposed-modules:    ICFPC.Geometry
                      , ICFPC.IntPairMap
                      , ICFPC.Annealing
    build-depends:    base >=4.14, containers, io, random
    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options:      -O2
