cabal-version:      2.4
name:               io
version:            0.1.0.0
author:             ICFPC 2021 Team Powder
maintainer:         mniip@mniip.com

library
    exposed-modules:    ICFPC.JSON
    build-depends:    base >=4.14, aeson, vector, bytestring
    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options:      -O2
