cabal-version:      2.4
name:               propagators
version:            0.1.0.0
author:             mniip
maintainer:         mniip@mniip.com

library
    exposed-modules:    ICFPC.Propagators
    build-depends:    base >= 4.14, containers, transformers, geometry, array
    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options:      -O2

executable propagate
    main-is:            Main.hs
    build-depends:    base >=4.14, io, geometry, containers, bytestring, propagators
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options:      -O2
