cabal-version:      2.4
name:               rate
version:            0.1.0.0
author:             mniip
maintainer:         mniip@mniip.com

executable rate
    main-is:          Main.hs
    build-depends:    base >= 4.14, io, geometry, containers, bytestring
    hs-source-dirs:   app
    default-language: Haskell2010
