cabal-version:       >=1.10

name:                splice
version:             0.1.0.0
author:              mniip
maintainer:          mniip@mniip.com
build-type:          Simple

library
  exposed-modules:       Splice
                       , Splice.Linker
  other-extensions:    TupleSections, RecordWildCards, BangPatterns
  build-depends:         base == 4.*
                       , containers >= 0.6
                       , time >= 1.9
                       , ghc-paths
                       , ghc >= 8.10
                       , ghci
                       , template-haskell
  hs-source-dirs:      src
  default-language:    Haskell2010
